--- a/mp3/Makefile
+++ b/mp3/Makefile
@@ -2,10 +2,10 @@
 all: mp3 mp3-rgba
 
 clean:
-	rm  -f mp3
+	rm  -f mp3 mp3-rgba
 
 mp3: mp3.c
-	clang -Wall -lGLEW -lglut -lGLU -lGL -o mp3 mp3.c
+	clang -Wall -o mp3 mp3.c -lGLEW -lglut -lGLU -lGL
 
 mp3-rgba: mp3-rgba.c
-	clang -Wall -lXi -lXrender -lGLEW -lglut -lGLU -lGL -o mp3-rgba mp3-rgba.c
+	clang -Wall -o mp3-rgba mp3-rgba.c -lXi -lXrender -lGLEW -lglut -lGLU -lGL
