Make sure this compiles on Debian

--- a/mp4/Makefile
+++ b/mp4/Makefile
@@ -5,7 +5,7 @@ clean:
 	rm  -f mp4 mp4-nonrgba
 
 mp4: mp4.c
-	clang -Wall -g -o mp4 mp4.c -lXi -lXrender -lGLEW -lglut -lGLU -lGL
+	$(CC) -Wall -g -o mp4 mp4.c -lX11 -lXi -lXrender -lGLEW -lglut -lGLU -lGL -lm
 
 mp4-nonrgba: mp4-nonrgba.c
-	clang -Wall -g -o mp4-nonrgba mp4-nonrgba.c -lXi -lXrender -lGLEW -lglut -lGLU -lGL
+	$(CC) -Wall -g -o mp4-nonrgba mp4-nonrgba.c -lX11 -lXi -lXrender -lGLEW -lglut -lGLU -lGL -lm
